# PaperNotes

./: README.md
FlowSegment/: CMakeLists.txt  ImgSeg.cpp  READEME.md  mat_head.h  optimalDFTSize.cpp
FlowSegment/code/: ImgSeg.h  yustd.h
FlowSegment/finalCode/: BGFGSegmentor.h  CMakeLists.txt  basic.cpp  demo.cpp  foreground.cpp  mat_opencv.h  mat_save.cpp  videoprocessor.h
GMM/code/: README.md  bgfg_gaussmix.cpp
PABS/: CMakeLists.txt  README.md  foreground.cpp
PABS/src/algorithms/: PixelBasedAdaptiveSegmenter.cpp
PABS/src/algorithms/PBAS/: PBAS.cpp  PBAS.h
Scale Match/: README.md
Scale Match/code/: scale_match.py
